update: add report conf